# NXPCup_2020

./: .gitignore
firmware/pixy/src/device/main_m0/Release/: main_m0_Release.ld
firmware/pixy/src/device/main_m4/: workspace.uvmpw
firmware/pixy/src/device/main_m4/spifi/: fappend
firmware/pixy/src/device/pixyflash/RTE/_pixyflash/: RTE_Components.h
firmware/pixy_cmake/: .gitignore  CMakeLists.txt  README.md
firmware/pixy_cmake/common/src/: lpc43xx_uart.c
firmware/pixy_cmake/libpixy_m0/: CMakeLists.txt
firmware/pixy_cmake/libpixy_m4/: CMakeLists.txt
firmware/pixy_cmake/main_m0/: CMakeLists.txt  pixy_board_m0_Debug.ld
firmware/pixy_cmake/main_m4/: CMakeLists.txt  LPC43xx_43Sxx.svd  pixy_board_Debug.ld
firmware/pixy_cmake/main_m4/src/: syscalls.c
hardware/3D_models/: sensors_holder_v2.SLDPRT
hardware/Sensors/: Sensors.OutJob
hardware/Sensors/__Previews/: Sensors.SchDocPreview
hardware/Xplorer_Camera/: Chineesium.OutJob  Xplorer_Camera.PcbDoc  Xplorer_Camera.PrjPcb  Xplorer_Camera.PrjPcbStructure  Xplorer_Camera_gerber.rar  Xplorer_camera.SchDoc
hardware/Xplorer_Camera/Xplorer_Camera_gerber/: Status Report.Txt
hardware/Xplorer_Camera/Xplorer_Camera_gerber/Gerber/: Xplorer_Camera.EXTREP  Xplorer_Camera.GBL  Xplorer_Camera.GBS  Xplorer_Camera.GM1  Xplorer_Camera.GTL  Xplorer_Camera.GTO  Xplorer_Camera.GTP  Xplorer_Camera.GTS  Xplorer_Camera.REP  Xplorer_Camera.RUL  Xplorer_Camera.apr
hardware/Xplorer_Camera/Xplorer_Camera_gerber/Gerber/__Previews/: Xplorer_Camera.REPPreview
hardware/Xplorer_Camera/Xplorer_Camera_gerber/NC Drill/: Xplorer_Camera-Plated.TXT  Xplorer_Camera.DRR  Xplorer_Camera.LDP
hardware/Xplorer_Camera/Xplorer_Camera_gerber/NC Drill/__Previews/: Xplorer_Camera.LDPPreview
hardware/main_board/: NXP_CUP_MainBoard.OutJob
hardware/main_board/__Previews/: Bridges.SchDocPreview  Connectors.SchDocPreview  Display.SchDocPreview  KLZ.SchDocPreview  Supply.SchDocPreview  Switches.SchDocPreview  uP.SchDocPreview
